<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">Go back</string>
    <string name="share_text">A must read book: </string>
    <string name="scan_flashcode">Scan a barcode</string>

    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="no_connection">No internet connection available</string>
    <string name="book_added">Book successfully added to your list of books</string>
    <string name="barcode_scanner">Barcode scanner</string>
    <string name="scanning">Scanning…</string>
    <string name="book_detail">Book Detail</string>
</resources>
